RESOLVED FIXED314863
Webpage reloaded because a problem occurred (Invalid message WebLockRegistryProxy::clientIsGoingAway)
https://bugs.webkit.org/show_bug.cgi?id=314863
Summary Webpage reloaded because a problem occurred (Invalid message WebLockRegistryP...
rupin
Reported 2026-05-14 19:02:04 PDT
Attachments
rupin
Comment 1 2026-05-14 21:14:50 PDT
EWS
Comment 2 2026-05-15 16:56:40 PDT
Committed 305413.913@safari-7624-branch (58357344684a): <https://commits.webkit.org/305413.913@safari-7624-branch> Reviewed commits have been landed. Closing PR #5294 and removing active labels.
Alexey Proskuryakov
Comment 3 2026-05-31 16:00:31 PDT
*** Bug 315895 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.